--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -16,6 +16,8 @@
     "mysql2": "^3.15.3",
     "pg": "^8.11.1",
     "serialport": "^13.0.0",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7",
     "uuid": "^13.0.0",
     "uuid4": "^2.0.3",
     "ws": "^8.18.3"
